univention-management-console-frontend (1.0.4-1) unstable; urgency=low  .    * forced vertical scrollbars for umc.widgets.Grid (Bug #22881)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.0/ucs@25970 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/style.css
+++ b/management/univention-management-console-frontend/css/style.css
@@ -203,3 +203,8 @@ div.modLaunchButtonClick {
 	border: none;
 }
 
+/* force scrollbars for grids */
+.umcGrid .dojoxGridScrollbox {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
